# pywin32

./: .clang-format  .cvsignore  .cvspass  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgeol  .hgignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  ASP_and_Python.html  CHANGES.md  CHANGES.txt  CHARFORMAT.html  COMMTIMEOUTS.html  COMPONENT.html  COMPONENTSOPT.html  COMPPOS.html  COMPSTATEINFO.html  CREATESTRUCT.html  CopyProgressRoutine.html  DEFCONTENTMENU.html  DOCINFO.html  DirectSound_examples.html  ELEMDESC.html  EXP_DARWIN_LINK.html  EXP_SPECIAL_FOLDER.html  EXP_SZ_LINK.html  EXTENSION_CONTROL_BLOCK.html  EXTENSION_CONTROL_BLOCK__DoneWithSession_meth.html  EXTENSION_CONTROL_BLOCK__ExecURL_meth.html  EXTENSION_CONTROL_BLOCK__GetAnonymousToken_meth.html  EXTENSION_CONTROL_BLOCK__GetExecURLStatus_meth.html  EXTENSION_CONTROL_BLOCK__GetImpersonationToken_meth.html  EXTENSION_CONTROL_BLOCK__GetServerVariable_meth.html  EXTENSION_CONTROL_BLOCK__IOCallback_meth.html  EXTENSION_CONTROL_BLOCK__IOCompletion_meth.html  (+6878 more)
.github/: issue_template.md
AutoDuck/: .cvsignore  AutoDuckPostProcess.py  BuildHHP.py  Dump2HHC.py  InsertExternalOverviews.py  PyWin32.hhc  PyWin32.hhk  PyWin32.hhp  PyWin32.html  README  README.md  TOCToHHK.py  bundle.mak  com.mak  common.mak  common_top.mak  document_object.py  fixHelpCompression.py  make.bat  make.py  makedfromi.py  makesrc.bat  py2d.py  pyhtml.fmt  pythonwin.fmt  pythonwin.mak  pywin32-document.xml  pywin32.mak  win32.mak  winxpgui.d
Pythonwin/: .cvsignore  License.txt  README.md  Scintilla.dsp  Win32app.h  Win32uiHostGlue.h  _All Pythonwin.dsp  contents.d  dbgthread.cpp  dde.dsp  ddeconv.cpp  ddeitem.cpp  ddemodule.cpp  ddemodule.h  ddeserver.cpp  ddetopic.cpp  dibapi.cpp  dibapi.h  dllmain.cpp  pythonRichEdit.cpp  pythonRichEdit.h  pythonRichEditCntr.cpp  pythonRichEditCntr.h  pythonRichEditDoc.cpp  pythonRichEditDoc.h  pythoncbar.h  (+106 more)
(+1935 files in other folders)
