[build-system]
requires = [
  "setuptools >=77.0.3" # made PEP-639 license deprecations introduced by 77.0.0 into warnings rather than errors
]
build-backend = "setuptools.build_meta"

[dependency-groups]
checkers = [ # Keep these in sync with .pre-commit-config.yaml
  "clang-format ==18.1.8",
  "ruff ==0.14.14",
]
type-checkers = [
  "types-setuptools >=80.9.0.20251221",
  "PyOpenGL",
  "mypy ==1.19.*",
  "pyright ==1.1.407",
]
dev = [
  "pre-commit",
  { include-group = "checkers" },
  { include-group = "type-checkers" },
]
